--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -1,5 +1,8 @@
 
-
+ @font-face {
+    font-family: Gilory Medium;
+    src: url(./fonts/Gilroy-Medium.ttf);
+ }
 .navBar {
     display: flex;
     justify-content: space-between;
@@ -13,15 +16,17 @@
     position: absolute;
     align-items: center;
     width: 100%;
+    height: 100%;
     background-color: FFFFFF;
 }
 
 .links {
     display: flex;
-    font-size: 2rem;
+    font-size: 1rem;
     font-weight: 300;
     padding-top: 20px;
-    font-family: 'Gilroy Medium', sans-serif; ;
+    font-family: Gilory Medium;
+
     
 }
 
@@ -52,13 +57,9 @@
     .links {
         display: flex;
         font-size: 1rem;
-        font-weight: 300;
+        font-weight: 200;
         padding-top: 5px;
     
     }
 }
 
-@font-face {
-    font-family: 'Gilroy Medium';
-    src: url('web\public\fonts\font gilroy\Gilroy-Medium.ttf') format('truetype');
-}
