--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -1,9 +1,20 @@
+@font-face {
+    font-family: Gilory Medium;
+    src: url(./fonts/Gilroy-Medium.ttf);
+    font-family: Gilory Bold;
+    src: url(./fonts/Gilroy-Bold.ttf);
+}
+
+
+
 
 .conteiner {
   display: flex;
   flex-direction: column;
   height: 100vh; 
 }
+
+/*Banner*/
 
 .conteinerBanner {
   flex: 1; 
@@ -40,34 +51,150 @@
     font-size: 10px;
 }
 .BannerImg {
-    background-color: black;
-    width: 100vh;
+    width: 60vh;
     height: 50vh;
-
-
 }
 .img {
     width: 100%;
     height: 100%;
 }
 
+
+
 .conteinerCards {
   flex: 3; 
   background-color: #2ecc71; 
+  min-height: 100vh;
 }
+
+
+
+
+
+/*Footer*/
 
 .conteinerFooter {
-  flex: 1; 
-  background-color: #e74c3c; 
+    flex: 1; 
+    background-color: black; 
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+}
+
+
+.footerSocial {
+    display: flex;
+    flex-direction: row;
+    align-items: center; 
+}
+
+.footerSocialTitle {
+    font-family: Gilory Bold;
+    color: #ff5000;
+    font-size: 30px;
+    margin-right: 10px; 
+}
+
+.footerLinks {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center; 
+}
+
+.Links {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    text-align: center; 
+    padding: 20px;
+}
+.footerTex {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center; 
+
+}
+.footerTex1{
+    color: white;
+    padding: 20px;
+    font-size: 10px;
+    font-family: Gilory Medium;
+    text-decoration: overline ;
+
+}
+.footerTex2{
+    color: white;
+    padding: 20px;
+    font-size: 10px;
+    font-family: Gilory Medium;
+
 }
 
 
 
+/*Media*/
 
 
-@font-face {
-    font-family: Gilory Medium;
-    src: url(./fonts/Gilroy-Medium.ttf);
-    font-family: Gilory Bold;
-    src: url(./fonts/Gilroy-Bold.ttf);
+
+@media (max-width: 600px) {
+    /*Banner*/
+    .img {
+        display: none;
+    }
+    .BannerImg {
+        display: none;
+    }
+    .BannerTex {
+        width: 100%; 
+        height: 100%; 
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+       
+    }
+
+    .BannerTexTitle {
+        font-size: 40px; 
+    }
+
+    .BannerTexSubTitle {
+        font-size: 16px; 
+    }
+
+    .BannerTexBody {
+        font-size: 8px; 
+    }
+
+    /*Footer*/
+
+    .footerSocial {
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .footerSocialTitle {
+        margin-right: 0; 
+    }
+
+    .footerLinks {
+        flex-direction: column;
+    }
+
+    .Links {
+        padding: 10px;
+    }
+
+    .footerTex {
+        flex-direction: column;
+    }
+    
+    .footerTex1,
+    .footerTex2 {
+        padding: 10px;
+    }
 }
