--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -12,12 +12,13 @@
 }
 .navOpen {
     display: flex;
-    flex-direction: column;
+    flex-direction: column-reverse;
     position: absolute;
     align-items: center;
     width: 100%;
-    height: 100%;
-    background-color: FFFFFF;
+    height: 35%;
+    background-color: white;
+    opacity: 60%;
 }
 
 .links {
@@ -58,7 +59,6 @@
         display: flex;
         font-size: 1rem;
         font-weight: 200;
-        padding-top: 5px;
     
     }
 }
