CARD Y NAV LISTO

--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -8,8 +8,7 @@
 
 .conteiner {
   display: flex;
-  flex-direction: column;
-  height: 100vh; 
+  flex-direction: column; 
 }
 
 /*Banner*/
@@ -64,23 +63,29 @@
 
 
 .menuSlider {
+    margin-top: 30px;
     display: flex;
     flex-direction: row;
     width: 100%; 
     border: 1px solid #ddd;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     background-color: white;
+    justify-content: space-evenly;
+    align-items: center;
   }
 .menuSliderTex {
+    text-decoration: none;
     margin: 20px;
     cursor: pointer;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
    
        
     
     
 }
 .menuSliderTex p{
-    color: #ff5000;
+    color: black;
     font-family: Gilory bold;
     white-space: pre-wrap;
     word-wrap: break-word;
@@ -100,28 +105,39 @@
     flex-direction: column;
     justify-content: center; 
     align-items: center; 
-  }
-
-.containerSlider {
-    display: flex;
-    flex-direction: column;
-    justify-content: center; 
-    align-items: center; 
-    padding-top: 30px;
-    padding-bottom: 30px;
-    margin: 20px;
-    overflow: hidden;
-    border: 1px solid #ddd; 
-    border-radius: 8px; 
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); 
-    background-color: white;
 }
+
+
 .texSlider{
     font-family: Gilory Bold;
     color: #ff5000;
     font-size: 30px;
     margin-right: 10px; 
 }
+
+
+
+.cardSlider {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    border: 1px solid #ddd;
+    border-radius: 20px;
+    background-color: rgb(255, 255, 255);
+}
+.myButton {
+    display: inline-block;
+    padding: 10px 20px; /* Ajusta el padding según tus necesidades */
+    text-align: center;
+    text-decoration: none;
+    color: white;
+    background-color: #ff5000; /* Color de fondo del botón */
+    border-radius: 20px; /* Bordes redondos */
+    cursor: pointer;
+    
+  }
 
 
 
@@ -197,6 +213,29 @@
 /*Media*/
 
 
+@media (max-width: 1000px) {
+    /*Slioder*/
+    .conteinerCards {
+        padding: 10px; 
+    }
+    .slider {
+        flex-direction: column; 
+        align-items: center; 
+    }
+    
+    .menuSlider {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      
+    .menuSliderTex {
+        margin: 10px;
+        width: calc(33.33% - 20px); 
+      }
+}
+
+
 
 @media (max-width: 800px) {
     /*Banner*/
@@ -236,14 +275,17 @@
         flex-direction: column; 
         align-items: center; 
     }
-    .menuSlider {
-        flex-direction: column; /* Cambia a dirección de columna en pantallas pequeñas */
-        align-items: center; /* Centra los elementos */
-    }
     
+    .menuSlider {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+      }
+      
     .menuSliderTex {
-        margin: 10px; /* Ajusta el margen para que se vea mejor en pantallas pequeñas */
-    }
+        margin: 10px;
+        width: calc(33.33% - 20px); 
+      }
 
     /*Footer*/
 
