--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -1,22 +1,35 @@
-
-.conteiner {
-    display: flex;
-    flex-direction: column; 
-  }
-
+@font-face {
+    font-family: Gilory Medium;
+    src: url(./fonts/Gilroy-Medium.ttf);
+    font-family: Gilory Bold;
+    src: url(./fonts/Gilroy-Bold.ttf);
+}
 
 
 /*Header*/
 .conteinerHeader {
-     
+    display: flex;
+    flex-direction: column;
     background-color: #ff5000;
-    width: 100%vh;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     
 }
 
+.SliderProducts{
+    background-color: #ff5000;
+    
+    
+      
+}
 
+.TexTitle {
+font-family: Gilory Bold;
+color: white;
+font-size: 40px;
+margin: 30PX;
 
+}
 
 
 
@@ -46,19 +59,14 @@
 .conteinerBody21 {
     background-color: aqua;
     width: 50%;
-    height: 50vh; /* Ajusta la altura según tus necesidades */
+    height: 50vh; 
 }
 
 .conteinerBody22 {
     background-color: blue;
     width: 100%;
-    height: 50vh; /* Ajusta la altura según tus necesidades */
+    height: 50vh; 
 }
-
-
-
-
-
 
 .conteinerBody3{
     flex: 1; 
@@ -134,7 +142,10 @@
 
 
 @media (max-width: 800px) {
-    /*Banner*/
+    /*Headers*/
+    .TexTitle{
+        font-size: 20px;
+    }
     /*Slioder*/
 
 
