--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -73,6 +73,38 @@
 .ProductVideo{
     margin: 20px;
 }
+/*Body Review*/
+.conteinerProducts4{
+    background-color: gainsboro;
+    margin: 40px;
+
+}
+.containerReview {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    width: 100%;
+    height: 100%vh;
+}
+.cardImgReview{
+    border-radius: 10px;
+
+}
+.textReview{
+   text-align: center;
+    font-family: Gilory Medium;
+    color: gray;
+    font-size: 20px;
+   
+}
+.titleReview{
+   
+    font-family: Gilory Bold;
+    color: black;
+    font-size: 20px;
+    text-align: center;
+   
+}
 
 
 /*Footer*/
