--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -5,11 +5,13 @@
     src: url(./fonts/Gilroy-Bold.ttf);
 }
 
-
+.conteiner{
+}
 
 /*Body*/
 
 .conteinerProducts1 {
+    padding-top: 100px;
     display: flex;
     flex-direction: row;
     width: 100%;
@@ -106,7 +108,26 @@
    
 }
 
+/*Funcion*/
+.conteinerProducts6{
+    background-color: gainsboro;
+    margin: 40px;
+}
+.cardProducFotter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center; /* Usar justify-content en lugar de justify-items */
+    margin: 20px;
+    gap: 20px;
 
+}
+.cardBodyFooter {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+}
 /*Footer*/
 
 .conteinerFooter {
@@ -213,7 +234,16 @@
         border-radius: 10px; /* Bordes redondos */
         cursor: pointer;
     }
-    /*Slioder*/
+    /*calculator*/
+
+    .cardProducFotter {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        overflow: hidden;
+    }
+    
 
 
     /*Footer*/
