--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -34,7 +34,8 @@
     display: flex;
     font-size: 1rem;
     font-weight: 200;
-    padding-top: 20px;
+    padding-top: 10px;
+    margin: 5px;
     font-family: Gilory Medium;
   }
 
