--- a/src/components/Products/Products.css
+++ b/src/components/Products/Products.css
@@ -17,6 +17,14 @@
     width: 100%;
     height: 100%vh;
 }
+.conteinerProducts2 {
+
+}
+.borderContainer {
+    position: relative;
+
+  }
+  
 
 .conteinerProducts1Imagen {
     width: 50%;
