--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -287,3 +287,13 @@
         padding: 10px;
     }
 }
+
+@media (max-width: 400px) {
+    .menuSliderTex {
+        font-size: 10px;      
+    }
+    .BannerTexBody {
+        margin: 10px;
+        font-size: 10px;
+    }
+}
