--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -1,19 +1,25 @@
 @font-face {
-    font-family: Gilory Medium;
-    src: url(./fonts/Gilroy-Medium.ttf);
-    font-family: Gilory Bold;
-    src: url(./fonts/Gilroy-Bold.ttf);
+    font-family: 'Gilory Medium';
+    src: url('./fonts/Gilroy-Medium.ttf');
+}
+
+@font-face {
+    font-family: 'Gilory Bold';
+    src: url('./fonts/Gilroy-Bold.ttf');
 }
 
 
-.conteiner{
+.conteiner {
+    display:  flex;
+    width: 100%;
+    height: 100%;
 }
+
 
 /*Header*/
 .conteinerHeader {
     display: flex;
     flex-direction: column;
-    background-color: #ff5000;
     margin-top: 6rem;
     width: 100%;
     height: 100%;
@@ -22,9 +28,7 @@
 
 .SliderProducts{
     background-color: #ff5000;
-    
-    
-      
+     
 }
 
 .TexTitle {
@@ -62,26 +66,30 @@ margin: 30PX;
 }
 
 .conteinerBody21 {
-    
+    padding-top:  100px ;
     width: 50%;
-    height: 50vh; 
+    height: 100%vh; 
 }
 
 .conteinerBody22 {
     width: 70%;
-    height: 50vh; 
+    height: 100%vh; 
 }
 .imagenHome{
     display: flex;
     width: 100%;
     height: 100%;
 }
-
-.conteinerBody3{
-    flex: 1; 
-    background-color: green;
-    width: 100%vh;
-    height: 100vh;
+.conteinerBody3 {
+    display: flex;
+    width: auto;
+    height: auto;
+    flex: 1;
+    background-image: url('./assests/imagen1.jpg'); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+    padding: 20px; /* Ajusta el relleno según tus necesidades */
 }
 .conteinerBodyText{
     display: flex;
@@ -92,6 +100,7 @@ margin: 30PX;
 }
 
 .myButtonHome {
+    margin-top: 20px;
     display: inline-block;
     padding: 4px 8px; /* Ajusta el padding según tus necesidades */
     text-align: center;
@@ -170,6 +179,12 @@ margin: 30PX;
 
 
 @media (max-width: 800px) {
+    .conteinerHeader {
+     
+        width: 100%;
+        height: 100%;
+        
+    }
     /*Headers*/
     .TexTitle{
         font-size: 20px;
@@ -184,6 +199,7 @@ margin: 30PX;
         flex-direction: column;
     }
     .conteinerBody21 {
+        padding-top: 10px;
         width: 100%;
         height: 50vh; 
     }
