--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -82,14 +82,22 @@ margin: 30PX;
 }
 .conteinerBody3 {
     display: flex;
-    width: auto;
-    height: auto;
     flex: 1;
     background-image: url('./assests/imagen1.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    padding: 20px; /* Ajusta el relleno según tus necesidades */
+    padding: 50px; /* Ajusta el relleno según tus necesidades */
+    
+}
+.conteinerBody31{
+    width: 50%;
+    height: 100vh; 
+    
+}
+.conteinerBody32 {
+    width: 50%;
+    height: 100vh;
 }
 .conteinerBodyText{
     display: flex;
@@ -210,7 +218,18 @@ margin: 30PX;
     }
     
     
+    .conteinerBody3 {
 
+    }
+    .conteinerBody31{
+        width: 50%;
+        height: 30vh; 
+        
+    }
+    .conteinerBody32 {
+        width: 50%;
+        height: 30vh;
+    }
     
 
 
@@ -243,3 +262,21 @@ margin: 30PX;
         padding: 10px;
     }
 }
+
+
+@media (max-width: 500px) {
+    .conteinerBody3 {
+
+    }
+    .conteinerBody31{
+        width: 50%;
+        height: 10vh; 
+        
+    }
+    .conteinerBody32 {
+        width: 50%;
+        height: 10vh;
+    }
+    
+}
+
