--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -33,8 +33,19 @@
 }
 
 .conteinerContactForm {
-    flex: 3;
-    background-color: red;
+    display: flex;
+    background-color: gainsboro;
+    height: 100%;
+    justify-content: center;
+    
+
+}
+.conteinerForm {
+    width: 100%;
+    margin: 20px;
+    border-radius: 10px;
+    background-color: white;
+    
 }
 
 @media (max-width: 800px) {
