--- a/src/components/Card/cardHome.css
+++ b/src/components/Card/cardHome.css
@@ -16,8 +16,12 @@
 }
 
 .cardHome {
-    margin: 20px;
+    margin: 10px;
     border: none;
+}
+.cardImgHome {
+    width: 285px; 
+    height: 285px;
 }
 
 .cardTextHome {
@@ -26,11 +30,17 @@
     color: black;
 }
 
+
 .cardBodyHome {
-    background-color: #ff5000 ;
+    background-color: #fd5000 ;
     border: none;
 }
-
+@media (max-width: 1000px) {
+    .cardImgHome {
+        width: 100%; 
+        height: auto; 
+    } 
+}
 @media (max-width: 500px) {
     
     .cardHome {
@@ -39,5 +49,4 @@
     .containerCards {
         width: 50%;
     }
-   
 }
