--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -13,6 +13,7 @@
     flex-direction: column;
     height: auto;
     width: auto;
+    margin-top: 100px;
 }
 
 .conteinerContactImg {
@@ -31,12 +32,16 @@
     font-family: 'Gilory Bold';
     color: white;
 }
-
+.conteinerCon{
+    background-color: #cccc;
+}
 .conteinerContactForm {
     display: flex;
-    background-color: gainsboro;
+    background-color: white;
     height: 100%;
     justify-content: center;
+    border-radius: 20px;
+    margin: 5%;
     
 
 }
