--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -49,8 +49,8 @@
   }
   
   .icon {
-    margin-left: 10px; /* Ajusta el espacio entre los iconos */
-    width: 20px; /* Ajusta el tamaño de los iconos según sea necesario */
+    margin-left: 10px; 
+    width: 20px; 
     height: 20px;
   }
   
