--- a/src/components/Blog/Blog.css
+++ b/src/components/Blog/Blog.css
@@ -10,12 +10,16 @@
   display: flex;
   flex-direction: column; 
 }
+.conteinerBlog {
+    background-color: #cccc;
+}
 
 /*Banner*/
 
-.conteinerBanner {
+.bannerConteiner {
   flex: 1; 
-  background-color: #ff5000;
+  margin-top: 100px;
+  
  
 }
 .Banner {
@@ -29,6 +33,7 @@
    
     width: 100vh;
     height: 50vh;
+
 
 }
 .BannerTexTitle {
@@ -63,11 +68,10 @@
 
 
 .menuSlider {
-    margin-top: 30px;
+    margin: 0;
     display: flex;
     flex-direction: row;
     width: 100%; 
-    border: 1px solid #ddd;
     background-color: white;
     justify-content: space-evenly;
     align-items: center;
@@ -86,7 +90,8 @@
 }
 .menuSliderTex p{
     color: black;
-    font-family: Gilory bold;
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.8rem;
     white-space: pre-wrap;
     word-wrap: break-word;
     text-align: center;
@@ -110,7 +115,7 @@
 
 .texSlider{
     font-family: Gilory Bold;
-    color: #ff5000;
+    color: #fd5000;
     font-size: 30px;
     margin-right: 10px; 
 }
@@ -133,11 +138,11 @@
     text-align: center;
     text-decoration: none;
     color: white;
-    background-color: #ff5000; /* Color de fondo del botón */
+    background-color: #fd5000; /* Color de fondo del botón */
     border-radius: 20px; /* Bordes redondos */
     cursor: pointer;
     
-  }
+}
 
 
 
