--- a/src/components/Card/cardHome2.css
+++ b/src/components/Card/cardHome2.css
@@ -32,7 +32,16 @@
     font-family: 'Gilory Bold';
     color: #fd5000; 
 }
-
+@media (max-width: 1000px) {
+    .containerCards2 {
+        margin-top: 100px;
+    }
+    
+    .cardImgHome2 {
+        width: 100%; 
+        height: auto; 
+    }
+}
 @media (max-width: 800px) {
     
     .cardImgHome2 {
@@ -42,10 +51,12 @@
 }
 
 @media (max-width: 500px) {
+
     
     .cardTextTitle2 {
         font-size: 10px;
         font-family: 'Gilory Bold';
         color: #fd5000; 
     }
+    
 }
