--- a/src/components/Contact/Contact.css
+++ b/src/components/Contact/Contact.css
@@ -19,7 +19,7 @@
 .conteinerContactImg {
     width: auto;
     height: 500px;
-    background-image: url('./assest/banner.jpg');
+    background-image: url('./assest/bannercontact1.jpg');
     background-size: cover;
     background-position: center;
     display: flex;
