--- a/src/components/Card/cardHome.css
+++ b/src/components/Card/cardHome.css
@@ -13,6 +13,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    align-content: center;
 }
 
 .cardHome {
@@ -40,13 +41,16 @@
         width: 100%; 
         height: auto; 
     } 
+    .cardHome {
+        margin: 10px;
+    }
 }
 @media (max-width: 500px) {
     
     .cardHome {
-        margin: 0;
+        margin: 5px;
     }
     .containerCards {
-        width: 50%;
+        width: 100%;
     }
 }
