--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -14,10 +14,10 @@
 
 }
 
-.conteinerHome {
+.conteinerhome {
+    margin: 0 auto; 
     background-color: transparent;
-
-}
+  }
 
 
 /*Header*/
@@ -91,12 +91,13 @@ padding-left: 10%;
 }
 .conteinerBody3 {
     display: flex;
-    width: 100%;
-    height: 50vh;
-    background-image: url('./assests/imagen1.jpg'); 
+    width: auto;
+    height: 350px;
+    background-image: url('./assests/reseña1.jpg'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
+
     
     
 }
@@ -104,15 +105,23 @@ padding-left: 10%;
     
     
 }
+
+
+
+
+.conteinerBody32 {
+    padding: 50px;
+    width: 100%;
+    max-width: 500px; 
+    margin: 0 auto; 
+}
+
 .conteinerBody31{
     width: 50%;
     height: 100vh; 
     
 }
-.conteinerBody32 {
-    padding: 50px;
-    
-}
+
 .conteinerBodyText{
     display: flex;
     flex-direction: column;
@@ -130,7 +139,7 @@ padding-left: 10%;
     background-color: #fd5000; 
     border-radius: 20px; 
     cursor: pointer;
-    margin-left: 40px;
+    
 }
 
 
@@ -235,19 +244,13 @@ padding-left: 10%;
     }
     
     
-    .conteinerBody3 {
 
-    }
     .conteinerBody31{
         width: 50%;
         height: 30vh; 
         
     }
-    .conteinerBody32 {
-        width: 50%;
-        height: 30vh;
-    }
-    
+ 
 
 
 
