--- a/src/components/Home/carousel/carousel1.css
+++ b/src/components/Home/carousel/carousel1.css
@@ -1,8 +1,15 @@
 .caruselImgenHome {
     max-width: 100%;
     height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 
-
-
+@media (max-width: 500px) {
+    .caruselcontHome {
+        
+        width: 150%;
+    }
+}
